app/assets/stylesheets/_feed.scss
$feed-avatar-size: 24px;
$feed-avatar-board-radius: 4px;
$feed-meta-spacing: 8px;

.feed-card {
  position: relative;
  background: #fff;
  padding: 16px 18px;
  margin-bottom: 8px;
  border-radius: 2px;
  border: 1px solid $border-color;
}

.feed {
  word-wrap: break-word;
}

.feed-content {
  color: $gray-700;
  font-size: 0.94em;
  margin-bottom: 1rem;
}

.feed-extra-content {
  font-size: smaller;

  .btn {
    vertical-align: baseline;
  }
}

.feed-header {
  font-weight: bold;
  font-size: 18px;
  margin-bottom: 8px;

  .label {
    width: 24px;
    height: 24px;
    padding: 0;
    font-size: 1em;  
    line-height: 24px;
    text-align: center;
    border-radius: 4px;
    display: inline-block;
  }
}

.feed-source {
  color: $green !important;

  .octicon {
    width: 8px;
    text-align: center;
  }

  &:hover {
    color: darken($green, 15%) !important;
  }
}

.feed-meta {
  font-weight: 500;
  margin-bottom: 8px;
}
.feed-meta-avatar {
  float: left;
  position: relative;

  .user-avatar {
    width: $feed-avatar-size;
    height: $feed-avatar-size;
    border-radius: $feed-avatar-board-radius;
  }
}
.feed-meta-content {
  margin-left: $feed-avatar-size + $feed-meta-spacing;
}
.feed-meta-time {
  font-size: 12px;
}

.social-count {
  position: relative;
  min-width: 1.9rem;
  text-align: center;
  display: inline-block;
  margin-left: 6px;
  font-size: $font-size-sm;
  border: 1px solid $gray-200;
  border-radius: $btn-border-radius-sm;
  padding: $input-btn-padding-y-sm $input-btn-padding-x-sm;
  line-height: $input-btn-line-height-sm;

  &::before,
  &::after {
    content: '';
    position: absolute;
    display: inline-block;
  }
  &::before {
    top: 50%;
    left: -13px;
    margin-top: -7px;
    border: 6px solid transparent;
    border-right-color: rgba($gray-200, 0.5);
  }
  &::after {
    top: 50%;
    left: -10px;
    margin-top: -6px;
    border: 5px solid transparent;
    border-right-color: #fff;
  }
}

@keyframes left-to-right {
  from {
    left: -240px;
  }
  to {
    left: 100%;
  }
}
.feed.wireframe {
  position: relative;
  overflow: hidden;

  &:after {
    top: 0;
    left: -240px;
    height: 100%;
    width: 240px;
    content: '';
    position: absolute;
    transition: left 1s;
    animation: left-to-right 1s ease-in infinite 1s;
    background: linear-gradient(100deg, rgba(#fff, 0), rgba(#fff, .4), rgba(#fff, 0));
  }
  .wireframe {
    color: #f0f0f0 !important;
    background: #f0f0f0;
    line-height: 18px;
    margin-bottom: 2px;
    display: inline-block;
    user-select: none;
    cursor: default;
  }
  .header {
    overflow: hidden;
    white-space: nowrap;

    .wireframe {
      margin: 0;
      line-height: 26px;
    }
  }
  .error-cover {
    top: 0;
    left: 0;
    z-index: 10;
    width: 100%;
    height: 100%;
    display: none;
    padding-top: 50px;
    position: absolute;
    text-align: center;
    background: rgba(255,255,255,.8);
  }
}
.has-error .feed .error-cover {
  display: block;
}
.feed-list > .feed {
  padding: 1rem 0;
  border-bottom: 1px solid $hr-border-color;
}

